test/tests/compiler/18_structures/invalid_parse/var_decl_bad_type_specifier.plx
type struc s;

# cannot combine struct keyword with other type specifier
pub a: struc s i64;

pub fn main(none) i32 {
    return 0
}
